Add router changes

--- a/practices/practiceB/app/styles/main.css
+++ b/practices/practiceB/app/styles/main.css
@@ -43,6 +43,7 @@ body {
 
 /* Main marketing message and sign up button */
 .jumbotron {
+  background: #FEE;
   text-align: center;
   border-bottom: 1px solid #e5e5e5;
 }
