--- a/practices/practiceB/app/views/about.html
+++ b/practices/practiceB/app/views/about.html
@@ -1,5 +1,6 @@
 <div>
   <h2>This is the about view.</h2>
+  <no-scope-directive></no-scope-directive>
   <div class="navbar navbar-default" role="navigation">
     <div class="container">
       <div class="collapse navbar-collapse" id="js-navbar-collapse">
