--- a/practices/practiceB/app/views/main.html
+++ b/practices/practiceB/app/views/main.html
@@ -1,23 +1,18 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+<div class="main">
+  <div class="panel panel-default">
+    <div class="panel-heading">Factory</div>
+    <div class="panel-body">
+      <input type="text" ng-model="factoryValue">
+      with taxes: <span class="label label-info"> {{getAmountWithTaxes() | currency}}</span>
+    </div>
+  </div>
+  
+  <div class="panel panel-default">
+    <div class="panel-heading">Service</div>
+    <div class="panel-body">
+      <ul>
+        <li ng-repeat="user in users track by $index">{{user.name}}</li>
+      </ul>
+    </div>
+  </div>
 </div>
